<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/foodbg"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg_box"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toTopOf="@id/box"
        app:layout_constraintBottom_toBottomOf="@id/box"
        app:layout_constraintRight_toRightOf="@id/box"
        app:layout_constraintLeft_toLeftOf="@id/box">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo2"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/box_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/google"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/button_shape"
                android:text="@string/google_text"/>

            <TextView
                android:id="@+id/facebook"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/button_shape"
                android:text="@string/facebook_text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/gmail"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/long_button"
            android:text="@string/email_register"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/already_have_account"/>

            <TextView
                android:id="@+id/enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/link_color"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/enter"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>