<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF181818"
    tools:context=".HomeFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/topbg"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.5" />

        <ImageView
            android:id="@+id/usernameimage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/usernameimage"
            app:layout_constraintLeft_toRightOf="@id/usernameimage"
            app:layout_constraintTop_toTopOf="@id/usernameimage" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/market"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintRight_toLeftOf="@id/market"
            app:layout_constraintWidth_percent="0.1" />

        <TextView
            android:id="@+id/market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/usernameimage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/usernameimage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Menu Pilihan"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:src="@drawable/fooditem1" />

            <ImageView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:src="@drawable/fooditem2" />

            <ImageView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:src="@drawable/fooditem1" />

            <ImageView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:src="@drawable/fooditem2" />

            <ImageView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:src="@drawable/fooditem1" />

            <ImageView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:src="@drawable/fooditem2" />

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Menu Pilihan"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:src="@drawable/smallfod1" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/smallfod2" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/smallfod3" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/smallfod4" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/smallfod1" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/smallfod2" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/smallfod3" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/smallfod4" />

        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/bottombar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>